update webpage for Debian packages

--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -218,20 +218,11 @@ The source code release for v0.7.2 is available from <a title="qof-0.7.2.tar.gz"
 href="http://prdownloads.sourceforge.net/qof/qof-0.7.2.tar.gz?download">
 SourceForge</a>.
 <h3>Debian</h3>
-Packages are available in 
-<a href="http://packages.debian.org/unstable/libs/libqof1">unstable</a>
-and <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>.
-<ul><li>
-There are <b>test packages</b> available using an apt repository.
-<br/><code>
-deb http://www.linux.codehelp.co.uk/packages unstable main<br/>
-deb-src http://www.linux.codehelp.co.uk/packages unstable main<br/>
-<br/>
-deb http://www.linux.codehelp.co.uk/packages experimental main<br/>
-deb-src http://www.linux.codehelp.co.uk/packages experimental main<br/>
-</code><br/>
-Please note that these are not the usual quality-assured Debian packages,
-these are only tests - demos if you will.</li></ul>
+<p>Packages are available in 
+<a href="http://packages.debian.org/unstable/libs/libqof1">unstable</a>,
+<a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
+and <a href="http://packages.debian.org/stable/libs/libqof1">stable</a>.
+</p>
 <h3>Ubuntu</h3>
 <ul>
 <li>Ubuntu Dapper: 
@@ -277,7 +268,7 @@ gpe-expenses</a> for embedded devices like iPAQs.</li>
 </div>
 <hr>
 <div><p>Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004<br/>
-Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; December 2006.</p>
+Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; December 2007.</p>
 </div>
 <hr>
 <div><a href="http://sourceforge.net/projects/qof/">
@@ -285,7 +276,7 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; December 2006.</p>
 <div id="licence">
 <p>The copyright licensing notice below applies to this text.</p>
 <p>Copyright &copy; 2004 Linas Vepstas</p>
-<p>Copyright &copy; 2005-2006 Neil Williams</p>
+<p>Copyright &copy; 2005-2007 Neil Williams</p>
 <p>Permission is granted to copy, distribute, and/or modify this document under
 the terms of the GNU Free Documentation License, Version 1.2 or any later
 version published by the Free Software Foundation; with no Invariant Sections, 
