--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -181,7 +181,7 @@ non-Gnome applications. This should be able to provide the generic access to
 various database managers like Postgres, MySQL, SQLite, Oracle and others 
 using ODBC. Unfortunately, although work has begun to use libgda, the current
 gnome-db stable release does not support creating (or deleting) tables. The
-module will be revisited when this support is complete. </p></li>
+module is now under active development as part of the transition to libqof2. </p></li>
 <li><p> The current 'client-side' SQL engine is rather basic in its features and
 performance. For example, the current search over object fields is O(N),
 because each object instance is checked for a match. It would be nice to add
