--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -228,6 +228,9 @@ at version 0.6.4-2.</li>
 <a href="http://packages.ubuntu.com/feisty/libs/libqof1">[universe]</a>
 usually at the same version as Debian testing, currently (0.7.3-1).</li>
 </ul>
+<h3>Gentoo</h3>
+<p>QOF 0.7.4 is available in the official
+repository of Gentoo Linux.</p>
 <h3>RPM packages</h3>
 <p>There is a sample .spec file available in QOF CVS, available via 
 <a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/rpm/">SourceForge</a>.
