--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -32,7 +32,7 @@ Translation</a></li>
 <div><img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
 symbol of the same name"></div>
 <h2 id="intro">Introduction</h2>
-<div><p>QOF, the Query Object Framework, provides a set of C Language utilities 
+<div><p>QOF, the Query Object Framework, provides a set of C Language utilities
 for performing generic structured complex queries on a set of data held by a set of
 C/C++ objects. This framework is unique in that it does NOT require SQL or any
 database at all to perform the query. Thus, it allows programmers to add query
@@ -83,7 +83,7 @@ http://lists.sourceforge.net/lists/listinfo/qof-devel</a>.</p>
 <hr><h2 id="origins">Origins</h2>
 <div><p>QOF is an offshoot from the <a href="http://www.gnucash.org/">GnuCash
 Project</a>, where this framework is a deep, central component. QOF is basically
-the GnuCash &quot;engine&quot; with all of the financial objects removed. As such, 
+the GnuCash &quot;engine&quot; with all of the financial objects removed. As such,
 QOF is &quot;tried and true&quot;, and has proven its worth.</p>
 </div>
 <hr><h2 id="functions">Function</h2>
@@ -114,11 +114,11 @@ round-off errors need to be eliminated and/or precisely controlled.</li>
 <li><b>Date and time utilities</b>.
 True 64bit handling of all times (seconds and nanoseconds) as well as all calendar dates.
 With the exception of locale-sensitive formats, standard parsing and printing
-commands have been extended to cope with all possible times and dates within 
-a couple of dozen times the age of the universe. All dates and times are 
+commands have been extended to cope with all possible times and dates within
+a couple of dozen times the age of the universe. All dates and times are
 consistent between platforms, whether time_t is 32bit or 64bit. Conversion to
 limited types like struct tm and time_t is supported within the range
-of the respective type, and sensible errors when out of range. 
+of the respective type, and sensible errors when out of range.
 (32bit time_t values will overflow in 2038.)</li>
 <li><b>Generic XML format</b>
 For data interchange. QOF objects can be translated and mapped between
@@ -128,7 +128,7 @@ Allows easy import / export of QOF data and handles collisions and user
 intervention.</li>
 <li><b>Undo support</b>
 Allows parameter level undo and redo support with programmable begin and
-end points. Each begin and end marks a single undo operation which can 
+end points. Each begin and end marks a single undo operation which can
 contain multiple parameter changes, entity creations or deletions according
 to the needs of the user. Undo currently supports up to 300 operations.
 </li>
@@ -141,8 +141,8 @@ various database managers, including sqlite.</li>
 <hr>
 <h2 id="goals">Project Goals</h2>
 <div><p>Below are some concrete project goals.
-See <a href="why-qof.html">&quot;Why QOF?&quot;</a> for the more abstract ideas 
-behind QOF, including the relationships between &quot;database-driven&quot;, 
+See <a href="why-qof.html">&quot;Why QOF?&quot;</a> for the more abstract ideas
+behind QOF, including the relationships between &quot;database-driven&quot;,
 &quot;program-driven&quot; and &quot;data-centric&quot; programming explored at
 <a href="http://www.data-freedom.org/explain.html">Data-Freedom.org</a>.</p>
 <ul><li><p> Provide an object framework that allows programmers to create expressive
@@ -175,10 +175,10 @@ DWI project, but they're not integrated yet. Neil has added support for partial
 books that make this cache possible and merging that makes the data in the
 partial books accessible. Partial books also make it simple to export an
 arbitrary selection of objects and entities. QOF v0.6.0 starts the process of
-using <code>libgda</code> - a data abstraction layer inherited from 
-<a href="http://www.gnome-db.org/">Gnome-DB</a> but available for use by 
-non-Gnome applications. This should be able to provide the generic access to 
-various database managers like Postgres, MySQL, SQLite, Oracle and others 
+using <code>libgda</code> - a data abstraction layer inherited from
+<a href="http://www.gnome-db.org/">Gnome-DB</a> but available for use by
+non-Gnome applications. This should be able to provide the generic access to
+various database managers like Postgres, MySQL, SQLite, Oracle and others
 using ODBC. Unfortunately, although work has begun to use libgda, the current
 gnome-db stable release does not support creating (or deleting) tables. The
 module is now under active development as part of the transition to libqof2. </p></li>
@@ -193,11 +193,11 @@ sql engine: its small fast and optimized. </p></li>
 users should be able to continue doing useful work even if they are not attached
 to the net. When they regain net access, QOF should be able to resynchronize
 with the remote servers. </p>
-<p><b>Status:</b> Implemented as XML. Any book (partial or complete) can be 
+<p><b>Status:</b> Implemented as XML. Any book (partial or complete) can be
 written out to XML and read back in to <b>any</b> QOF application.
 </p></li>
-<li><p> Provide memory-management facilities. If objects in the local object 
-cache haven't been used in a while, and the application memory usage is getting 
+<li><p> Provide memory-management facilities. If objects in the local object
+cache haven't been used in a while, and the application memory usage is getting
 too large, the unused objects should be &quot;reaped&quot; or garbage-collected.
 Of course, this can be done only if the object is fully in sync with the persistent
 storage backend.</p>
@@ -211,34 +211,25 @@ The source code release for v0.7.5 is available from <a title="qof-0.7.5.tar.gz"
 href="http://prdownloads.sourceforge.net/qof/qof-0.7.5.tar.gz?download">
 SourceForge</a>.
 <h3>Debian</h3>
-<p>Packages are available in 
+<p>Packages are available in
 <a href="http://packages.debian.org/unstable/libs/libqof1">unstable</a>,
 <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>
 and <a href="http://packages.debian.org/stable/libs/libqof1">stable</a>.
 </p>
 <h3>Ubuntu</h3>
-<ul>
-<li>Ubuntu Dapper: 
-<a href="http://packages.ubuntu.com/dapper/libs/libqof1">[universe]</a>
-has version 0.6.1-1.</li>
-<li>Ubuntu Edgy :
-<a href="http://packages.ubuntu.com/edgy/libs/libqof1">[universe]</a>
-at version 0.6.4-2.</li>
-<li>Ubuntu Feisty : 
-<a href="http://packages.ubuntu.com/feisty/libs/libqof1">[universe]</a>
-usually at the same version as Debian testing, currently (0.7.3-1).</li>
-</ul>
+<p>All releases since Dapper have included QOF. Feisty is the
+first to include v0.7 or later.</p>
 <h3>Gentoo</h3>
 <p>QOF 0.7.4 is available in the official
 repository of Gentoo Linux.</p>
 <h3>RPM packages</h3>
-<p>There is a sample .spec file available in QOF CVS, available via 
+<p>There is a sample .spec file available in QOF CVS, available via
 <a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/rpm/">SourceForge</a>.
 <a href="http://rpmfind.net/linux/rpm2html/search.php?query=qof">RPM packages</a>
 have been prepared for v0.6.4 in Fedora 4 and 5 as well as OpenSuSE Factory.</p>
 <h3>Mac OSX &amp; Fink</h3>
-Packages are also possible for Fink and DarwinPorts (Mac OSX) - a sample Finkinfo file 
-is provided in QOF CVS via 
+Packages are also possible for Fink and DarwinPorts (Mac OSX) - a sample Finkinfo file
+is provided in QOF CVS via
 <a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/fink/">SourceForge</a>.
 </div>
 
@@ -246,14 +237,14 @@ is provided in QOF CVS via
 <h2 id="status">Project Status</h2>
 <div>
 <p>This code is in active, daily use in several projects
-and is 'stable' code. See the 
+and is 'stable' code. See the
 <a href="hacking.html#roadmap">roadmap</a> for
 the current development direction.</p>
 <p>Some projects currently using QOF are:</p>
 <ul>
 <li><a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).</li>
 <li><a href="http://www.gnucash.org">GnuCash</a> - modified source.</li>
-<li><a href="http://pilot-qof.sourceforge.net/">pilot-qof</a> 
+<li><a href="http://pilot-qof.sourceforge.net/">pilot-qof</a>
 (Query Palm databases).</li>
 <li><a href="http://dwi.sourceforge.net/">DWI</a> (Data With Interaction).</li>
 <li><a href="http://cashutil.sourceforge.net/">CashUtil</a>
@@ -275,9 +266,9 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; December 2007.</p>
 <p>Copyright &copy; 2005-2007 Neil Williams</p>
 <p>Permission is granted to copy, distribute, and/or modify this document under
 the terms of the GNU Free Documentation License, Version 1.2 or any later
-version published by the Free Software Foundation; with no Invariant Sections, 
-with no Front-Cover Texts, and with no Back-Cover Texts. 
-In installed versions, the licence can be found in the 
+version published by the Free Software Foundation; with no Invariant Sections,
+with no Front-Cover Texts, and with no Back-Cover Texts.
+In installed versions, the licence can be found in the
 <a href="../copyright">copyright</a> file.</p>
 </div>
 </body>
