--- a/wiki/trunk/index.html
+++ b/wiki/trunk/index.html
@@ -30,7 +30,7 @@ Query Object Framework
 <li><a href="recentchanges/">RecentChanges</a></li>
 
 
-<li><a href="http://svn.debian.org/viewsvn/qof/trunk/qof/website/index.mdwn">History</a></li>
+<li><a href="http://svn.debian.org/viewsvn/qof/trunk/wiki/trunk/index.mdwn">History</a></li>
 
 
 <li><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?do=prefs">Preferences</a></li>
@@ -100,7 +100,7 @@ simpler, more natural way to work with objects.</p>
 <h3>Generating examples of your own</h3>
 
 <p><a href="http://qof-gen.sourceforge.net/">
-<img src="sflogosm.png" alt="qof-gen at &lt;span class="><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?page=sourceforge&amp;from=index&amp;do=create">?</a>SourceForge</span>" id="sflogosm"&gt;
+<img src="sflogosm.png" alt="qof-gen" id="sflogosm">
 </a></p>
 
 <p>Writing new QOF objects and examples can be a tad repetitive so
@@ -361,7 +361,7 @@ In installed versions, the licence can be found in the
 
 
 <div class="pagedate">
-Last edited Thu 17 Apr 2008 12:00:59 PM UTC
+Last edited Thu 17 Apr 2008 04:52:33 PM UTC
 <!-- Created Thu 17 Apr 2008 10:32:43 AM UTC -->
 </div>
 
