--- a/wiki/trunk/sandbox/index.html
+++ b/wiki/trunk/sandbox/index.html
@@ -32,7 +32,7 @@ sandbox
 <li><a href="../recentchanges/">RecentChanges</a></li>
 
 
-<li><a href="http://svn.debian.org/viewsvn/qof/trunk/qof/website/sandbox.mdwn">History</a></li>
+<li><a href="http://svn.debian.org/viewsvn/qof/trunk/wiki/trunk/sandbox.mdwn">History</a></li>
 
 
 <li><a href="http://qof.alioth.debian.org/cgi-bin/ikiwiki.cgi?do=prefs">Preferences</a></li>
@@ -52,6 +52,8 @@ sandbox
 <hr />
 
 <p>Here's a paragraph.</p>
+
+<p>foo</p>
 
 <p>Here's another one with <em>emphasised</em> text.</p>
 
@@ -112,7 +114,7 @@ Links:
 
 
 <div class="pagedate">
-Last edited Sat 12 Apr 2008 05:42:50 PM UTC
+Last edited Thu 17 Apr 2008 04:54:49 PM UTC
 <!-- Created Sat 12 Apr 2008 05:42:50 PM UTC -->
 </div>
 
