--- a/wiki/trunk/index.html
+++ b/wiki/trunk/index.html
@@ -124,7 +124,7 @@ made elsewhere.</p>
 <h2><span id="docs">Documentation</span></h2>
 
 <p>The API documentation is embedded in the header files and
-<a href="doxy/index.html">can be viewed as HMTL</a></p>
+<a href="doxy/index.html">can be viewed as HMTL</a>.</p>
 
 <hr />
 
@@ -361,8 +361,8 @@ In installed versions, the licence can be found in the
 
 
 <div class="pagedate">
-Last edited Thu 17 Apr 2008 04:52:33 PM UTC
-<!-- Created Thu 17 Apr 2008 10:32:43 AM UTC -->
+Last edited Thu Apr 17 17:05:49 2008
+<!-- Created Thu Apr 17 10:32:43 2008 -->
 </div>
 
 </div>
