--- a/wiki/trunk/index.html
+++ b/wiki/trunk/index.html
@@ -361,8 +361,8 @@ In installed versions, the licence can be found in the
 
 
 <div class="pagedate">
-Last edited Thu Apr 17 17:05:49 2008
-<!-- Created Thu Apr 17 10:32:43 2008 -->
+Last edited Thu 17 Apr 2008 05:05:49 PM UTC
+<!-- Created Thu 17 Apr 2008 10:32:43 AM UTC -->
 </div>
 
 </div>
